cma_es.log
*** Error compiling 'cma_es/cma_es_interface.py'...
  File "cma_es/cma_es_interface.py", line 53
    print 'Ok'
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t 'Ok')?

*** Error compiling 'cma_es/tst_cma_es.py'...
  File "cma_es/tst_cma_es.py", line 70
    print list(m.get_result())
             ^
SyntaxError: invalid syntax

